--- a/index.html
+++ b/index.html
@@ -10,23 +10,57 @@
 </head>
 <body>
     <!-- Header -->
-    <div class="Header-Content">
-        <div class="max-width">
-            <div class="left-side">
-                <img src="./assets/images/Perfil.jpg" alt="Foto de Perfil">
-                <div class="user-info">
-                    <i class="material-icons">menu_open</i>
-                    <h3 class="name">Nikolas</h3>
-                    <p class="mail">Nikolas@gmail.com</p>
+    <header>
+        <div class="Header-Content">
+            <div class="max-width">
+                <div class="left-side">
+                    <div class="user-img">
+                        <img src="./assets/images/Perfil.jpg" alt="User img">
+                    </div>
+                    <div class="user-info">
+                        <span class="material-icons">menu_open</span>
+                        <div class="name">Nikolas</div>
+                        <div class="mail">nikolasyuri@gmail.com</div>
+                    </div>
+                </div>
+                <div class="right-side">
+                    <div class="today">Hoje,</div>
+                    <span>Segunda, 7 de julho</span>
                 </div>
             </div>
-            <div class="right-side">
-                <h2>Hoje</h2>
-                <p><span>Segunda</span>, <span>7</span> de <span>Julho</span></p>
+        </div>
+    </header>
+    <!-- Section -->
+    <div class="Section-Content">
+        <div class="max-width">
+            <div class="left-column">
+                <nav class="Lists">
+                    <ul>
+                        <li class="faculdade">
+                            <i class="material-icons">school</i>
+                            <h3>Faculdade</h3>
+                            <p>1</p>
+                        </li>
+                        <li class="trabalho">
+                            <i class="material-icons">work</i>
+                            <h3>Trabalho</h3>
+                            <p>1</p>
+                        </li>
+                        <li class="pessoal">
+                            <i class="material-icons">face</i>
+                            <h3>Pessoal</h3>
+                            <p>1</p>
+                        </li>
+                        <li class="React-Native">
+                            <i class="material-icons">code</i>
+                            <h3>React Native</h3>
+                            <p>1</p>
+                        </li>
+                    </ul>
+                </nav>
             </div>
+            <div class="right-column"></div>
         </div>
     </div>
-    <!-- Section -->
-
 </body>
 </html>
