Lado Esquerdo e Lado Direito Iniciado (HTML e CSS)

--- a/index.html
+++ b/index.html
@@ -40,26 +40,64 @@
                             <i class="material-icons">school</i>
                             <h3>Faculdade</h3>
                             <p>1</p>
+                            <i class="material-icons" id="sort-lists">sort</i>
                         </li>
                         <li class="trabalho">
                             <i class="material-icons">work</i>
                             <h3>Trabalho</h3>
                             <p>1</p>
+                            <i class="material-icons" id="sort-lists">sort</i>
                         </li>
                         <li class="pessoal">
                             <i class="material-icons">face</i>
                             <h3>Pessoal</h3>
                             <p>1</p>
+                            <i class="material-icons" id="sort-lists">sort</i>
                         </li>
-                        <li class="React-Native">
+                        <li class="react-Native">
                             <i class="material-icons">code</i>
                             <h3>React Native</h3>
                             <p>1</p>
+                            <i class="material-icons" id="sort-lists">sort</i>
                         </li>
                     </ul>
                 </nav>
+                <div class="add-List">
+                    <p>Adicionar Lista</p>
+                    <i class="material-icons">add</i>
+                </div>
             </div>
-            <div class="right-column"></div>
+            <div class="right-column">
+                <div class="max-width">
+                    <div class="tasks">
+                        <ul>
+                            <li class="Lavar-Banheiro">
+                                <i class="material-icons" id="radio-unchecked">radio_button_unchecked</i>
+                                <h3 class="task">Lavar Banheiro</h3>
+                                <i class="material-icons">face</i>
+                                <p>Pessoal</p>
+                                <i class="material-icons" id="start">schedule</i>
+                            </li>
+                            <li class="Retirar-o-lixo">
+                                <i class="material-icons" id="radio-unchecked">radio_button_unchecked</i>
+                                <h3 class="task">Retirar o lixo</h3>
+                                <i class="material-icons">face</i>
+                                <p>Pessoal</p>
+                                <span class="repeat">- Seg,Qua e Sex<i class="material-icons">restart_alt</i></span>
+                                <i class="material-icons" id="start">schedule</i>
+                            </li>
+                            <li class="Criar-Design">
+                                <i class="material-icons" id="radio-unchecked">radio_button_unchecked</i>
+                                <h3 class="task">Criar Design</h3>
+                                <i class="material-icons">code</i>
+                                <p>React Native</p>
+                                <span> - Trabalho Figma <p>2</p> de <p>5</p></span>
+                                <i class="material-icons" id="start">schedule</i>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
