Lado Direito Começando a ir de verdade

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <li class="pessoal">
                             <i class="material-icons">face</i>
                             <h3>Pessoal</h3>
-                            <p>1</p>
+                            <p></p>
                             <i class="material-icons" id="sort-lists">sort</i>
                         </li>
                         <li class="react-Native">
@@ -70,31 +70,22 @@
             <div class="right-column">
                 <div class="max-width">
                     <div class="tasks">
-                        <ul>
-                            <li class="Lavar-Banheiro">
-                                <i class="material-icons" id="radio-unchecked">radio_button_unchecked</i>
-                                <h3 class="task">Lavar Banheiro</h3>
-                                <i class="material-icons">face</i>
-                                <p>Pessoal</p>
-                                <i class="material-icons" id="start">schedule</i>
-                            </li>
-                            <li class="Retirar-o-lixo">
-                                <i class="material-icons" id="radio-unchecked">radio_button_unchecked</i>
-                                <h3 class="task">Retirar o lixo</h3>
-                                <i class="material-icons">face</i>
-                                <p>Pessoal</p>
-                                <span class="repeat">- Seg,Qua e Sex<i class="material-icons">restart_alt</i></span>
-                                <i class="material-icons" id="start">schedule</i>
-                            </li>
-                            <li class="Criar-Design">
-                                <i class="material-icons" id="radio-unchecked">radio_button_unchecked</i>
-                                <h3 class="task">Criar Design</h3>
-                                <i class="material-icons">code</i>
-                                <p>React Native</p>
-                                <span> - Trabalho Figma <p>2</p> de <p>5</p></span>
-                                <i class="material-icons" id="start">schedule</i>
-                            </li>
-                        </ul>
+                        <i class="material-icons">radio_button_unchecked</i>
+                        <div class="task">
+                            <h4>Apresentar Trabalho</h4>
+                            <div class="info">
+                                <i class="material-icons">work</i>
+                                <span id="list">Trabalho</span>
+                                <p>-</p>
+                                <i class="material-icons">replay</i>
+                                <span id="repeat">Seg, Qua e Sex</span>
+                                <p>-</p>
+                                <span id="original-task">Trabalho Figma</span>
+                                <p>-</p>
+                                <span id="date">Amanhã</span>
+                            </div>
+                        </div>
+                        <i class="material-icons" id="timer">timer</i>
                     </div>
                 </div>
             </div>
