--- a/index.html
+++ b/index.html
@@ -72,6 +72,50 @@
                     <div class="tasks">
                         <i class="material-icons">radio_button_unchecked</i>
                         <div class="task">
+                            <h4>Lavar Banheiro</h4>
+                            <div class="info">
+                                <i class="material-icons">face</i>
+                                <span id="list">Pessoal</span>
+                                <p>-</p>
+                                <i class="material-icons">today</i>
+                                <span id="date">Hoje</span>
+                            </div>
+                        </div>
+                        <i class="material-icons" id="timer">timer</i>
+                    </div>
+                    <div class="tasks">
+                        <i class="material-icons">radio_button_unchecked</i>
+                        <div class="task">
+                            <h4>Retirar o lixo</h4>
+                            <div class="info">
+                                <i class="material-icons">face</i>
+                                <span id="list">Pessoal</span>
+                                <p>-</p>
+                                <i class="material-icons">replay</i>
+                                <span id="repeat">Seg, Qua e Sex</span>
+                            </div>
+                        </div>
+                        <i class="material-icons" id="timer">timer</i>
+                    </div>
+                    <div class="tasks">
+                        <i class="material-icons">radio_button_unchecked</i>
+                        <div class="task">
+                            <h4>Criar Design</h4>
+                            <div class="info">
+                                <i class="material-icons">code</i>
+                                <span id="list">React Native</span>
+                                <p>-</p>
+                                <span id="original-task">Trabalho Figma</span>
+                                <p>-</p>
+                                <i class="material-icons">date_range</i>
+                                <span id="date">Amanhã</span>
+                            </div>
+                        </div>
+                        <i class="material-icons" id="timer">timer</i>
+                    </div>
+                    <div class="tasks">
+                        <i class="material-icons">radio_button_unchecked</i>
+                        <div class="task">
                             <h4>Apresentar Trabalho</h4>
                             <div class="info">
                                 <i class="material-icons">work</i>
@@ -82,11 +126,18 @@
                                 <p>-</p>
                                 <span id="original-task">Trabalho Figma</span>
                                 <p>-</p>
+                                <i class="material-icons">date_range</i>
                                 <span id="date">Amanhã</span>
                             </div>
                         </div>
                         <i class="material-icons" id="timer">timer</i>
                     </div>
+                </div>
+                <div class="agenda">
+                    <i class="material-icons">event_note</i>
+                </div>
+                <div class="add-task">
+                    <i class="material-icons">add_circle</i>
                 </div>
             </div>
         </div>
