Quase Finalizado a Responsividade

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="right-column">
                 <div class="max-width">
                     <div class="tasks">
-                        <i class="material-icons">radio_button_unchecked</i>
+                        <i class="material-icons" id="radio">radio_button_unchecked</i>
                         <div class="task">
                             <h4>Lavar Banheiro</h4>
                             <div class="info">
@@ -84,7 +84,7 @@
                         <i class="material-icons" id="timer">timer</i>
                     </div>
                     <div class="tasks">
-                        <i class="material-icons">radio_button_unchecked</i>
+                        <i class="material-icons" id="radio">radio_button_unchecked</i>
                         <div class="task">
                             <h4>Retirar o lixo</h4>
                             <div class="info">
@@ -98,7 +98,7 @@
                         <i class="material-icons" id="timer">timer</i>
                     </div>
                     <div class="tasks">
-                        <i class="material-icons">radio_button_unchecked</i>
+                        <i class="material-icons" id="radio">radio_button_unchecked</i>
                         <div class="task">
                             <h4>Criar Design</h4>
                             <div class="info">
@@ -114,7 +114,7 @@
                         <i class="material-icons" id="timer">timer</i>
                     </div>
                     <div class="tasks">
-                        <i class="material-icons">radio_button_unchecked</i>
+                        <i class="material-icons" id="radio">radio_button_unchecked</i>
                         <div class="task">
                             <h4>Apresentar Trabalho</h4>
                             <div class="info">
@@ -132,12 +132,14 @@
                         </div>
                         <i class="material-icons" id="timer">timer</i>
                     </div>
-                </div>
-                <div class="agenda">
-                    <i class="material-icons">event_note</i>
-                </div>
-                <div class="add-task">
-                    <i class="material-icons">add_circle</i>
+                    <div class="buttons">
+                        <div class="agenda">
+                            <i class="material-icons">event_note</i>
+                        </div>
+                        <div class="add-task">
+                            <i class="material-icons">add_circle</i>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
