--- a/index.html
+++ b/index.html
@@ -32,6 +32,82 @@
     </header>
     <!-- Section -->
     <div class="Section-Content">
+        <!-- <div class="countdown">
+            <div class="pomodoro-task">
+                <h2>Estudar Piano</h2>
+                <div class="pomodoro-list">
+                    <i class="material-icons">school</i>
+                    <span>Faculdade</span>
+                </div>
+            </div>
+            <div class="timer-countdown">
+                <span>24:59</span>
+            </div>
+            <button>Concluir</button>
+            <div class="buttons">
+                <i class="material-icons" id="song">audiotrack</i>
+                <i class="material-icons" id="close">close</i>
+            </div>
+        </div> -->
+        <div class="form">
+            <form action="">
+                <fieldset>
+                    <legend><b>Nova Tarefa</b></legend>
+                    <br>
+                    <div class="inputBox">
+                        <input type="text" name="new-task" id="new-task" class="new-task" required>
+                        <label for="new-task">Adicionar Nova Tarefa</label>
+                    </div>
+                    <br>
+                    <div class="inputBox">
+                        <input type="text" name="new-step" id="new-step" class="new-step">
+                        <label for="new-step">1º passo</label>
+                    </div>
+                    <br>
+                    <div class="inputBox">
+                        <label for="list">Selecionar Lista</label>
+                            <select id="list" name="list">
+                              <option value="nenhum">Nenhum</option>
+                              <option value="faculdade">Faculdade</option>
+                              <option value="trabalho">Trabalho</option>
+                              <option value="pessoal">Pessoal</option>
+                              <option value="react-Native">React-Native</option>
+                            </select>
+                    </div>
+                    <br>
+                    <div class="inputBox">
+                        <label for="repeat">Repetir</label>
+                            <select id="repeat" name="repeat">
+                              <option value="nenhum">Não se repete</option>
+                              <option value="diariamente">Diariamente</option>
+                              <option value="semanalmente">Semanalmente</option>
+                              <option value="mensalmente">Mensalmente</option>
+                              <option value="anualmente">Anualmente</option>
+                            </select>
+                    </div>
+                    <br>
+                    <div class="inputBox">
+                        <input type="text" name="description" id="description" class="description">
+                        <label for="description">Descrição</label>
+                    </div>
+                    <br>
+                    <div class="inputBox">
+                        <input type="text" name="agenda" id="agenda" class="agenda">
+                        <label for="agenda">Adicionar ao Google Agenda</label>
+                    </div>
+                    <br>
+                    <div class="inputBox">
+                        <input type="text" name="timer" id="timer" class="timer">
+                        <label for="timer">Timer</label>
+                    </div>
+                    <br>
+                    <div class="buttons">
+                        <input type="reset" value="Fechar">
+                        <input type="submit" name="submit" id="submit" value="Adicionar Tarefa">
+                    </div>
+                </fieldset>
+            </form>
+        </div>
         <div class="max-width">
             <div class="left-column">
                 <nav class="Lists">
@@ -74,75 +150,101 @@
                         <div class="task">
                             <h4>Lavar Banheiro</h4>
                             <div class="info">
-                                <i class="material-icons">face</i>
-                                <span id="list">Pessoal</span>
+                                <div class="list" id="Pessoal">
+                                    <i class="material-icons" id="list-icon">face</i>
+                                    <span id="list">Pessoal</span>
+                                </div>
                                 <p>-</p>
-                                <i class="material-icons">today</i>
+                                <i class="material-icons" id="date-icon">today</i>
                                 <span id="date">Hoje</span>
                             </div>
                         </div>
-                        <i class="material-icons" id="timer">timer</i>
+                        <div class="timer">
+                            <span id="countdown">30 min</span>
+                            <i class="material-icons" id="timer">timer</i>
+                        </div>
                     </div>
                     <div class="tasks">
                         <i class="material-icons" id="radio">radio_button_unchecked</i>
                         <div class="task">
-                            <h4>Retirar o lixo</h4>
+                            <h4>História da Música</h4>
                             <div class="info">
-                                <i class="material-icons">face</i>
-                                <span id="list">Pessoal</span>
+                                <div class="list" id="Faculdade">
+                                    <i class="material-icons" id="list-icon">school</i>
+                                    <span id="list">Faculdade</span>
+                                </div>
                                 <p>-</p>
-                                <i class="material-icons">replay</i>
+                                <i class="material-icons" id="repeat-icon">replay</i>
                                 <span id="repeat">Seg, Qua e Sex</span>
+                                <p>-</p>
+                                <i class="material-icons" id="time-icon">schedule</i>
+                                <span class="time">8:30h</span>
                             </div>
                         </div>
-                        <i class="material-icons" id="timer">timer</i>
+                        <div class="timer">
+                            <i class="material-icons" id="timer">timer</i>
+                        </div>
                     </div>
                     <div class="tasks">
                         <i class="material-icons" id="radio">radio_button_unchecked</i>
                         <div class="task">
                             <h4>Criar Design</h4>
                             <div class="info">
-                                <i class="material-icons">code</i>
-                                <span id="list">React Native</span>
+                                <div class="list" id="React-Native">
+                                    <i class="material-icons" id="list-icon">code</i>
+                                    <span id="list">React Native</span>
+                                </div>
                                 <p>-</p>
+                                <i class="material-icons" id="original-task-icon">task</i>
                                 <span id="original-task">Trabalho Figma</span>
                                 <p>-</p>
-                                <i class="material-icons">date_range</i>
+                                <i class="material-icons" id="date-icon">date_range</i>
                                 <span id="date">Amanhã</span>
+                                <p>-</p>
+                                <i class="material-icons" id="time-icon">schedule</i>
+                                <span class="time">14:30h</span>
                             </div>
                         </div>
-                        <i class="material-icons" id="timer">timer</i>
+                        <div class="timer">
+                            <i class="material-icons" id="timer">timer</i>
+                        </div>
                     </div>
                     <div class="tasks">
                         <i class="material-icons" id="radio">radio_button_unchecked</i>
                         <div class="task">
                             <h4>Apresentar Trabalho</h4>
                             <div class="info">
-                                <i class="material-icons">work</i>
-                                <span id="list">Trabalho</span>
+                                <div class="list" id="Trabalho">
+                                    <i class="material-icons" id="list-icon">work</i>
+                                    <span id="list">Trabalho</span>
+                                </div>
                                 <p>-</p>
-                                <i class="material-icons">replay</i>
-                                <span id="repeat">Seg, Qua e Sex</span>
+                                <i class="material-icons" id="original-task-icon">task</i>
+                                <span id="original-task">Projeto CSS</span>
                                 <p>-</p>
-                                <span id="original-task">Trabalho Figma</span>
-                                <p>-</p>
-                                <i class="material-icons">date_range</i>
-                                <span id="date">Amanhã</span>
+                                <i class="material-icons" id="date-icon">date_range</i>
+                                <span id="date">26 de Junho</span>
                             </div>
                         </div>
-                        <i class="material-icons" id="timer">timer</i>
+                        <div class="timer">
+                            <span id="countdown">40 min</span>
+                            <i class="material-icons" id="timer">timer</i>
+                        </div>
                     </div>
                     <div class="buttons">
                         <div class="agenda">
-                            <i class="material-icons">event_note</i>
+                            <i class="material-icons" id="agenda-icon">event_note</i>
                         </div>
                         <div class="add-task">
-                            <i class="material-icons">add_circle</i>
+                            <i class="material-icons" id="add-task-icon">add_circle</i>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    
+    <!-- Form -->
+    
 </body>
 </html>
