Finalizado, porém ainda não responsivo

--- a/index.html
+++ b/index.html
@@ -146,9 +146,11 @@
                         </li>
                     </ul>
                 </nav>
-                <div class="add-List">
-                    <p>Adicionar Lista</p>
-                    <i class="material-icons">add</i>
+                <div class="new-list">
+                    <div class="add-List">
+                        <p>Adicionar Lista</p>
+                        <i class="material-icons">add</i>
+                    </div>
                 </div>
             </div>
             <div class="right-column">
