--- a/index.html
+++ b/index.html
@@ -165,14 +165,21 @@
                         <i class="material-icons" id="radio">radio_button_unchecked</i>
                         <div class="task">
                             <h4>Criar Design</h4>
+                            <div class="originalTask">
+                                <i class="material-icons" id="original-task-icon">task</i>
+                                <span id="original-task">Trabalho Figma</span>
+                            </div>
                             <div class="info">
-                                <div class="list" id="react-Native">
+                                <div class="list" id="React-Native">
                                     <i class="material-icons" id="list-icon">code</i>
-                                    <span id="list">React-Native</span>
+                                    <span id="list">React Native</span>
                                 </div>
                                 <p>-</p>
-                                <i class="material-icons" id="date-icon">today</i>
+                                <i class="material-icons" id="date-icon">date_range</i>
                                 <span id="date">Amanhã</span>
+                                <p>-</p>
+                                <i class="material-icons" id="time-icon">schedule</i>
+                                <span class="time">14:30h</span>
                             </div>
                         </div>
                     </div>
@@ -242,6 +249,7 @@
                     <h3>Domingo</h3>
                     <span>13</span>
                 </div>
+            </div>
         </div>
 
         <!-- Main Page -->
@@ -376,14 +384,15 @@
 
         <!-- Buttons -->
         <div class="buttons">
-            <div class="agenda">
-                <i class="material-icons" id="agenda-icon">event_note</i>
-            </div>
-            <div class="add-task">
-                <i class="material-icons" id="add-task-icon">add_circle</i>
-            </div>
+                <div class="agenda">
+                    <i class="material-icons" id="agenda-icon">event_note</i>
+                </div>
+                <div class="add-task">
+                    <i class="material-icons" id="add-task-icon">add_circle</i>
+                </div>
         </div>
     </div>
+
     
 
 
