--- a/index.html
+++ b/index.html
@@ -213,6 +213,68 @@
                         <input type="text" name="new-step" id="new-step" class="inputUser" placeholder="1º Passo">
                     </div>
                     <br>
+                    <div class="inputBox" id="date-time">
+                        <form action="">
+                            <label for="Data">Data:</label>
+                            <input type="date" id="Data" name="Data">
+                          </form>
+                        <div class="inputBox" id="timeto">
+                            <label for="timeto" class="label-input"></label>
+                                <select id="formTime" name="Time" class="inputUser">
+                                    <option value="00:00h">00:00h</option>
+                                    <option value="00:30h">00:30h</option>
+                                    <option value="01:00h">01:00h</option>
+                                    <option value="01:30h">01:30h</option>
+                                    <option value="02:00h">02:00h</option>
+                                    <option value="02:30h">02:30h</option>
+                                    <option value="03:00h">03:00h</option>
+                                    <option value="03:30h">03:30h</option>
+                                    <option value="04:00h">04:00h</option>
+                                    <option value="04:30h">04:30h</option>
+                                    <option value="05:00h">05:00h</option>
+                                    <option value="05:30h">05:30h</option>
+                                    <option value="06:00h">06:00h</option>
+                                    <option value="06:30h">06:30h</option>
+                                    <option value="07:00h">07:00h</option>
+                                    <option value="07:30h">07:30h</option>
+                                    <option value="08:00h">08:00h</option>
+                                    <option value="08:30h">08:30h</option>
+                                    <option value="09:00h">09:00h</option>
+                                    <option value="09:30h">09:30h</option>
+                                    <option value="10:00h">10:00h</option>
+                                    <option value="10:30h">10:30h</option>
+                                    <option value="11:00h">11:00h</option>
+                                    <option value="11:30h">11:30h</option>
+                                    <option value="12:00h">12:00h</option>
+                                    <option value="12:30h">12:30h</option>
+                                    <option value="13:00h">13:00h</option>
+                                    <option value="13:30h">13:30h</option>
+                                    <option value="14:00h">14:00h</option>
+                                    <option value="14:30h">14:30h</option>
+                                    <option value="15:00h">15:00h</option>
+                                    <option value="15:30h">15:30h</option>
+                                    <option value="16:00h">16:00h</option>
+                                    <option value="16:30h">16:30h</option>
+                                    <option value="17:00h">17:00h</option>
+                                    <option value="17:30h">17:30h</option>
+                                    <option value="18:00h">18:00h</option>
+                                    <option value="18:30h">18:30h</option>
+                                    <option value="19:00h">19:00h</option>
+                                    <option value="19:30h">19:30h</option>
+                                    <option value="20:00h">20:00h</option>
+                                    <option value="20:30h">20:30h</option>
+                                    <option value="21:00h">21:00h</option>
+                                    <option value="21:30h">21:30h</option>
+                                    <option value="22:00h">22:00h</option>
+                                    <option value="22:30h">22:30h</option>
+                                    <option value="23:00h">23:00h</option>
+                                    <option value="23:30h">23:30h</option>
+
+                                </select>
+                        </div>
+                        <br>
+                    </div>
+                    <br>
                     <div class="inputBox" id="select">
                         <div class="inputBox" id="formAllLists">
                             <label for="list" class="label-input"></label>
